添加struts思维导图

--- a/docs/resources/css/anime-bubble.css
+++ b/docs/resources/css/anime-bubble.css
@@ -16,6 +16,7 @@
     }
 }
 h1.newYear{
+    position: relative;
     -moz-user-select: none;
     -webkit-user-select: none;
     font-weight: bold;
